freebsd-manpages (9.2+1-2) UNRELEASED; urgency=low

  * Bump Standards-Version to 3.9.6 (no changes)
  * Fix debian/watch to also recognize 10.X and Y.10 releases
  * Switch debian/watch to use HTTP instead of FTP
  * Switch from perl's deprecated prename to (file-)rename
    + Update build-dependency from perl to rename.

 -- Axel Beckert <abe@debian.org>  Wed, 05 Feb 2014 21:23:02 +0100

freebsd-manpages (9.2+1-1) unstable; urgency=low

  * Fix get-orig-source target to use versioned file names for the
    downloaded base.txz file. Avoids reusing the previous release's
    base.txz file.
  * Restrict targets for "dh $@" to not match get-orig-source
  * Use tar option --no-xattrs instead of ignoring tar's exit code due to
    unknown extended header keywords as present in FreeBSD's tar balls.
  * Reupload with correctly generated orig.tar.xz

 -- Axel Beckert <abe@debian.org>  Sun, 20 Oct 2013 00:41:52 +0200

freebsd-manpages (9.2-1) unstable; urgency=low

  * New upstream version.
  * Upload to unstable again.

 -- Axel Beckert <abe@debian.org>  Sat, 19 Oct 2013 23:04:07 +0200

freebsd-manpages (9.1-1) experimental; urgency=low

  * New upstream version.
    + Handle multiple architecture subdirectories properly
  * Rename update target to the more common name get-orig-source
  * Rework get-orig-source target to support FreeBSD releases which don't
    offer manpages for download separately.
  * Use debian/install and dh_install instead of calling "cp" manually
    + Remove now unneeded debian/dirs and dh_installdirs call
  * Use prename instead of double for loop to add freebsd man page suffix
    + Add build-dependency on perl
  * Use hardlink to deduplicate man pages with multiple names after
    dh_installman's recoding again.
    + Reduces package size by more than 60%
    + Add build-dependency on hardlink
  * Switch to minimal dh7 style debian/rules file.

 -- Axel Beckert <abe@debian.org>  Sat, 31 Aug 2013 02:46:45 +0200
