@@ -5,6 +5,8 @@ freebsd-manpages (9.2+1-2) UNRELEASED; urgency=low
   * Switch debian/watch to use HTTP instead of FTP
   * Switch from perl's deprecated prename to (file-)rename
     + Update build-dependency from perl to rename.
+  * Add get-orig-source-beta to debian/rules and support beta versions in
+    debian/watch.
 
  -- Axel Beckert <abe@debian.org>  Wed, 05 Feb 2014 21:23:02 +0100
 
